Fixed z-index issue with case study desc on small screens

--- a/portfolio-website/src/app/components/case-study/case-study.component.scss
+++ b/portfolio-website/src/app/components/case-study/case-study.component.scss
@@ -143,6 +143,7 @@ a.button[href="#"] {
         margin: 0 5%;
         max-height: 65vh;
         color: rgb(0, 0, 0);
+        z-index: 75;
     }
 
     .case-study-desc h3 {
